--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ img {
 .top-bar {
     width: 100%;
     z-index: 999;
-    position: fixed;
     padding: 10px 20px;
     background: white;
     color: #E50010;
@@ -45,16 +44,16 @@ img {
 }
 
 .navbar {
-    margin-top: 33px;
     width: 100%;
     z-index: 99;
-    position: fixed;
-    padding: 20px 20px;
+    position: sticky;
+    top: 0;
+    padding: 10px 20px;
     height: 64px;
     background: #121212;
     display: flex;
     align-items: center;
-    justify-content: flex-start; 
+    justify-content: flex-start;
 }
 
 .nav-left {
@@ -109,7 +108,6 @@ img {
 }
 
 .hero-container {
-    margin-top: 90px;
     position: relative;
     width: 100%;
 }
@@ -443,5 +441,24 @@ img {
     .social-icons {
         gap: 15px;
         font-size: 18px;
+    }
+
+    @media (max-width: 480px) {
+
+        .navbar {
+            padding: 5px 10px;
+        }
+
+        .auth-buttons {
+              position: fixed;
+              bottom: 0;
+              left: 0;
+              width: 100%;
+              justify-content: center;
+              background: rgba(18,18,18,0.6);
+              padding: 8px 0;
+              z-index: 999;
+        }
+      
     }
 }
